# key-manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml  railway.toml
client/: .env.example  .gitignore  PrivateKVClient.ts  README.md  llm.txt  near-fastkv-encrypted-0.1.0.tgz  package-lock.json  package.json  pnpm-lock.yaml
client/examples/: check-key.cjs  complete-test.cjs  e2e-outlayer-api.ts  e2e-outlayer-tx.cjs  e2e-outlayer-tx.ts  e2e-outlayer.ts  full-e2e.cjs  local-test.ts  onchain-write.cjs  outlayer-test.cjs  read-back.cjs  redis-decrypt.cjs  test-env.cjs  test-rpc.cjs  test-with-key.cjs  with-fastkv.ts
client/src/: PrivateKV.ts  index.ts  types.ts
client/src/adapters/: fastkv.test.ts  fastkv.ts  memory.ts  outlayer.test.ts  outlayer.ts
client/src/crypto/: index.ts
contract/: Cargo.toml  README.md
contract/src/: lib.rs
docs/: FASTKV_INTEGRATION.md
examples/: README.md  key-manager-client.ts  package.json  tsconfig.json  types.ts
examples/fastkv-integration/: README.md  kv-client.js  kv-client.ts
examples/private-kv/: PrivateKV.ts  README.md  privatekv.js
examples/profile-secrets/: README.md  api-server.js  client.js  profile-client.ts  schema.json
examples/shared-vault/: README.md  vault-client.ts  vault-manager.js
examples/wallet-signer/: README.md  wallet-client.js  wallet-client.ts
fastdata-indexer/: .gitignore  Cargo.toml  Procfile  RAILWAY.md  README.md  docker-compose.yml
fastdata-indexer/kv-sub-indexer/: Cargo.toml
fastdata-indexer/kv-sub-indexer/src/: main.rs  scylla_types.rs
fastdata-indexer/main-indexer/: Cargo.toml
fastdata-indexer/main-indexer/src/: main.rs
fastdata-indexer/redis_db/: Cargo.toml
fastdata-indexer/redis_db/src/: lib.rs
fastdata-indexer/suffix-fetcher/: Cargo.toml
fastdata-indexer/suffix-fetcher/src/: lib.rs
fastkv-server/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Procfile  README.md  REFERENCE.md  create-tables.rs  nixpacks.toml  railpack.json  railway.toml  start.sh
fastkv-server/src/: handlers.rs  main.rs  models.rs  redis_db.rs  scylladb.rs  social_handlers.rs  tree.rs
fastkv-server/static/: app.js  index.html  style.css  wallet.js
releases/: key-manager-v0.3.0.wasm
src/: lib.rs  main.rs
test-fastdata-tx/src/: main.rs
