[workspace]
members = [".", "fastkv-server"]
resolver = "2"

[package]
name = "key-manager"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "key-manager"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
