[package]
name = "kv-sub-indexer"
description = "Indexer for FastData KV storage. Parses KV data and stores into Redis."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
redis_db = { path = "../redis_db" }
suffix-fetcher = { path = "../suffix-fetcher" }
base64.workspace = true

dotenvy.workspace = true
fastnear-primitives.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
