[package]
name = "main-indexer"
description = "Indexer for FastData. Collects raw blobs from the neardata and stores them into Redis."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
redis_db = { path = "../redis_db" }
base64.workspace = true

dotenvy.workspace = true
fastnear-primitives.workspace = true
fastnear-neardata-fetcher.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
futures.workspace = true
