[package]
name = "redis_db"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
